<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Other string resources-->

    <string name="app_name">Github User App</string>
    <string name="username">Username</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search">Username</string>
    <string name="btn_search">Search</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="notFollowers">Tidak Mempunyai Followers</string>
    <string name="notFollowing">Tidak Mempunyai Following</string>
    <string name="detail">Detail</string>
    <string name="nama">Nama</string>
    <string name="setting">Setting</string>
    <string name="Back">back</string>
    <string name="image_view_splash_screen">Image View Splash Screen</string>
    <string name="search">search</string>
    <string name="favorit">Favorit</string>
    <string name="key_alarm">alarm</string>
    <string name="alarm_off">Matikan Alarm</string>
    <string name="alarm_on">Hidupkan Alarm</string>
    <string name="alarm_title">Alarm Pengingat</string>

</resources>


